2014-10-16  Martin Liska  <mliska@suse.cz>

	* ipa-icf.c (sem_item_optimizer::process_cong_reduction):
	Cast to unsigned long.
	(sem_item_optimizer::dump_cong_classes): Likewise.

2014-10-16  Tom de Vries  <tom@codesourcery.com>

	* tree-into-ssa.c (update_ssa): Assert that there's no ssa use operand
	with SSA_NAME_IN_FREELIST.

2014-10-16  Richard Biener  <rguenther@suse.de>

	PR middle-end/63554
	* builtins.c (fold_builtin_4): Do not call fold_builtin_strncat_chk.
	(fold_builtin_strncat_chk): Move ...
	* gimple-fold.c (gimple_fold_builtin_strncat_chk): ... here.
	(gimple_fold_builtin): Call gimple_fold_builtin_strncat_chk.

2014-10-16  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/59401
	* config/sh/sh.h (CALL_REALLY_USED_REGISTERS): Expand macro and set
	GBR to 0.

2014-10-16  Alexander Ivchenko  <alexander.ivchenko@intel.com>
	    Maxim Kuznetsov  <maxim.kuznetsov@intel.com>
	    Anna Tikhonova  <anna.tikhonova@intel.com>
	    Ilya Tocar  <ilya.tocar@intel.com>
	    Andrey Turetskiy  <andrey.turetskiy@intel.com>
	    Ilya Verbin  <ilya.verbin@intel.com>
	    Kirill Yukhin  <kirill.yukhin@intel.com>
	    Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* config/i386/i386.c (ix86_expand_mul_widen_hilo): Handle V32HI, V16SI,
	V64QI modes.

2014-10-16  Alexander Ivchenko  <alexander.ivchenko@intel.com>
	    Maxim Kuznetsov  <maxim.kuznetsov@intel.com>
	    Anna Tikhonova  <anna.tikhonova@intel.com>
	    Ilya Tocar  <ilya.tocar@intel.com>
	    Andrey Turetskiy  <andrey.turetskiy@intel.com>
	    Ilya Verbin  <ilya.verbin@intel.com>
	    Kirill Yukhin  <kirill.yukhin@intel.com>
	    Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* config/i386/i386.c (ix86_expand_vector_set): Handle V8DF, V8DI, V16SF,
	V16SI, V32HI, V64QI modes.

2014-10-16  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53513
	* config/sh/sh-protos.h (emit_sf_insn, emit_df_insn, expand_sf_unop,
	expand_sf_binop, expand_df_unop, expand_df_binop): Remove.
